# nnenum

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  README.md  pyproject.toml  remote_execution.txt  requirements.txt  run_all  run_in_docker  run_in_docker.sh  run_tests.sh
cnn/eth/: eth_check.py  run_eth
cnn/oval/: oval_check.py
examples/acasxu/: README  README.md  acasxu_339.py  acasxu_all.py  acasxu_single.py
examples/ali_bug/: ali.py
examples/bug_issue7/: net.onnx  p2_acaxurange.vnnlib
examples/cifar2020/: README.md
examples/mnistcnn/: README.md  generate_spec.py  image0.vnnlib
examples/mnistfc/: README.md
examples/test/: README.md
expected_results/: acasxu-all-empty.txt  acasxu-all-front.txt  acasxu-all-nnenum.txt  acasxu-all-results.txt  ggn-all-empty.txt  ggn-all-front.txt  ggn-all-nnenum.txt  ggn-all-results.txt  pat-all-empty.txt  pat-all-front.txt  pat-all-nnenum.txt  pat-all-results.txt  split_results.py  stdout_net2_0.02.txt  stdout_net2_0.05.txt  stdout_net4_0.02.txt  stdout_net4_0.05.txt  stdout_net6_0.02.txt  stdout_net6_0.05.txt
nnenum/nnenum/: agen.py  enumerate.py  lp_star.py  lp_star_state.py  lpinstance.py  lpplot.py  lputil.py  network.py  onnx_network.py  overapprox.py  prefilter.py  result.py  settings.py  specification.py  timerutil.py  util.py  worker.py  zonotope.py
onnx_to_tf_conversion/: README  cifar_base_kw_noscale.onnx.pb  mnist_0.1.onnx.pb  mnist_0.1_noscale.onnx.pb  onnx_remove_scaling.py  onnx_to_tensorflow1.py
vnncomp_scripts/: README.md  install_tool.sh  prepare_instance.sh  run_instance.sh
(+43 files in other folders)
